--- a/.gitattributes
+++ b/.gitattributes
@@ -151,6 +151,22 @@ components/mysql/tmysqldatabase.xpm -text svneol=native#image/x-xpixmap
 components/mysql/tmysqldataset.xpm -text svneol=native#image/x-xpixmap
 components/printers/cupsprintersdlgs.pp svneol=native#text/pascal
 components/printers/lazprinter.pp svneol=native#text/pascal
+components/printers/linux/cupsdyn.pp svneol=native#text/pascal
+components/printers/linux/cupsprinters.inc svneol=native#text/pascal
+components/printers/linux/cupsprinters_h.inc svneol=native#text/pascal
+components/printers/linux/jobsimglist.lrs svneol=native#text/pascal
+components/printers/linux/printerprop.lrs svneol=native#text/pascal
+components/printers/linux/selectprinter.lrs svneol=native#text/pascal
+components/printers/linux/udlgprintersjobs.lfm svneol=native#text/plain
+components/printers/linux/udlgprintersjobs.lrs svneol=native#text/pascal
+components/printers/linux/udlgprintersjobs.pp svneol=native#text/pascal
+components/printers/linux/udlgpropertiesprinter.lfm svneol=native#text/plain
+components/printers/linux/udlgpropertiesprinter.lrs svneol=native#text/pascal
+components/printers/linux/udlgpropertiesprinter.pp svneol=native#text/pascal
+components/printers/linux/udlgselectprinter.lfm svneol=native#text/plain
+components/printers/linux/udlgselectprinter.lrs svneol=native#text/pascal
+components/printers/linux/udlgselectprinter.pp svneol=native#text/pascal
+components/printers/osprinters.pas svneol=native#text/pascal
 components/printers/printer4lazarus.lpk svneol=native#text/pascal
 components/printers/printer4lazarus.pas svneol=native#text/pascal
 components/printers/printersdlgs.lrs svneol=native#text/pascal
@@ -161,6 +177,10 @@ components/printers/sample/frmselprinter.lrs svneol=native#text/pascal
 components/printers/sample/frmselprinter.pas svneol=native#text/pascal
 components/printers/sample/selectprinter.lpi svneol=native#text/plain
 components/printers/sample/selectprinter.lpr svneol=native#text/pascal
+components/printers/win32/winprinters.inc svneol=native#text/pascal
+components/printers/win32/winprinters_h.inc svneol=native#text/pascal
+components/printers/win32/winutilprn.pas svneol=native#text/pascal
+components/printers/win32/winutilprnconst.inc svneol=native#text/pascal
 components/printers/winprinters.pas svneol=native#text/pascal
 components/printers/winutilprn.pas svneol=native#text/pascal
 components/printers/winutilprnconst.inc svneol=native#text/pascal
