--- a/components/printers/sample/selectprinter.lpi
+++ b/components/printers/sample/selectprinter.lpi
@@ -1,20 +1,17 @@
 <?xml version="1.0"?>
 <CONFIG>
   <ProjectOptions>
+    <PathDelim Value="\"/>
     <Version Value="5"/>
     <General>
       <MainUnit Value="0"/>
-      <ActiveEditorIndexAtStart Value="1"/>
+      <ActiveEditorIndexAtStart Value="0"/>
+      <IconPath Value="./"/>
       <TargetFileExt Value=".exe"/>
       <Title Value="selectprinter"/>
     </General>
-    <JumpHistory Count="1" HistoryIndex="0">
-      <Position1>
-        <Filename Value="frmselprinter.pas"/>
-        <Caret Line="9" Column="10" TopLine="1"/>
-      </Position1>
-    </JumpHistory>
-    <Units Count="3">
+    <JumpHistory Count="0" HistoryIndex="-1"/>
+    <Units Count="9">
       <Unit0>
         <Filename Value="selectprinter.lpr"/>
         <IsPartOfProject Value="True"/>
@@ -22,29 +19,69 @@
         <UsageCount Value="20"/>
       </Unit0>
       <Unit1>
-        <CursorPos X="31" Y="41"/>
+        <CursorPos X="12" Y="28"/>
         <EditorIndex Value="0"/>
         <Filename Value="frmselprinter.pas"/>
         <ComponentName Value="Form1"/>
         <IsPartOfProject Value="True"/>
         <Loaded Value="True"/>
         <ResourceFilename Value="frmselprinter.lrs"/>
-        <TopLine Value="5"/>
-        <UnitName Value="frmSelPrinter"/>
+        <TopLine Value="1"/>
+        <UnitName Value="frmselprinter"/>
         <UsageCount Value="20"/>
       </Unit1>
       <Unit2>
         <CursorPos X="15" Y="29"/>
-        <EditorIndex Value="1"/>
         <Filename Value="G:\projects\winspl\PrintersDlgs.pp"/>
-        <Loaded Value="True"/>
         <TopLine Value="1"/>
         <UnitName Value="PrintersDlgs"/>
         <UsageCount Value="10"/>
       </Unit2>
+      <Unit3>
+        <CursorPos X="87" Y="19"/>
+        <Filename Value="xfrmselprinter.pas"/>
+        <ComponentName Value="Form1"/>
+        <TopLine Value="1"/>
+        <UnitName Value="frmSelPrinter"/>
+        <UsageCount Value="10"/>
+      </Unit3>
+      <Unit4>
+        <CursorPos X="46" Y="27"/>
+        <Filename Value="\home\olivier\lazarus\components\printers\printersdlgs.pp"/>
+        <TopLine Value="1"/>
+        <UnitName Value="PrintersDlgs"/>
+        <UsageCount Value="10"/>
+      </Unit4>
+      <Unit5>
+        <CursorPos X="23" Y="48"/>
+        <Filename Value="\home\olivier\lazarus\components\printers\osprinters.pas"/>
+        <TopLine Value="10"/>
+        <UnitName Value="OSPrinters"/>
+        <UsageCount Value="10"/>
+      </Unit5>
+      <Unit6>
+        <CursorPos X="47" Y="669"/>
+        <Filename Value="\home\olivier\lazarus\components\printers\linux\cupsprinters.inc"/>
+        <TopLine Value="1"/>
+        <UsageCount Value="10"/>
+      </Unit6>
+      <Unit7>
+        <CursorPos X="16" Y="57"/>
+        <Filename Value="\home\olivier\lazarus\components\printers\linux\cupsprinters_h.inc"/>
+        <TopLine Value="48"/>
+        <UsageCount Value="10"/>
+      </Unit7>
+      <Unit8>
+        <CursorPos X="1" Y="1389"/>
+        <Filename Value="\home\olivier\lazarus\components\printers\linux\cupsdyn.pp"/>
+        <TopLine Value="1344"/>
+        <UnitName Value="cupsdyn"/>
+        <UsageCount Value="10"/>
+      </Unit8>
     </Units>
     <PublishOptions>
       <Version Value="2"/>
+      <DestinationDirectory Value="$(TestDir)\publishedproject\"/>
       <IgnoreBinaries Value="False"/>
       <IncludeFileFilter Value="*.(pas|pp|inc|lfm|lpr|lrs|lpi|lpk|sh|xml)"/>
       <ExcludeFileFilter Value="*.(bak|ppu|ppw|o|so);*~;backup"/>
@@ -52,7 +89,7 @@
     <RunParams>
       <local>
         <FormatVersion Value="1"/>
-        <LaunchingApplication PathPlusParams="/usr/X11R6/bin/xterm -T 'Lazarus Run Output' -e $(LazarusDir)/tools/runwait.sh $(TargetCmdLine)"/>
+        <LaunchingApplication PathPlusParams="\usr\X11R6\bin\xterm -T 'Lazarus Run Output' -e $(LazarusDir)\tools\runwait.sh $(TargetCmdLine)"/>
       </local>
     </RunParams>
     <RequiredPackages Count="2">
@@ -66,7 +103,7 @@
     </RequiredPackages>
   </ProjectOptions>
   <CompilerOptions>
-    <Version Value="2"/>
+    <Version Value="4"/>
     <PathDelim Value="\"/>
     <SearchPaths>
       <SrcPath Value="$(LazarusDir)\lcl\;$(LazarusDir)\lcl\interfaces\$(LCLWidgetType)\"/>
